se coloco documentacion y tests